--- a/client/pages/activity/index.wxss
+++ b/client/pages/activity/index.wxss
@@ -1,3 +1,6 @@
+page {
+  background:#F8F8FF;
+}
 .activity_item{
     width: 48%;
     margin: 1% 0% 1% 1%;
@@ -9,7 +12,7 @@
 .activity_item .activity_details {
   position: relative;
   left: 10rpx;
-  /* border: 1rpx solid yellow; */
+  /* border: 1rpx solid rebeccapurple; */
 }
 
 .activity_item .activity_details .user_info {
@@ -32,12 +35,12 @@
 .activity_item .activity_details .activity_info{
   /* height: 40rpx; */
   font-weight: bolder;
-  width: 75%;
+  width: 80%;
   float: right;
   /* vertical-align: middle; */
   /* margin: auto; */
   padding: 0 0 0 0rpx;
-  font-size: 20rpx;
+  font-size: 25rpx;
   text-align:left;
   /* border: 1rpx solid green; */
 }
@@ -50,11 +53,11 @@
 .activity_item .activity_details .activity_memo{
   /* height: 40rpx; */
   font-weight: bolder;
-  width: 75%;
+  width: 92%;
   float: left;
-  font-size: 20rpx;
+  font-size: 25rpx;
   text-align:left;
-  /* border: 1rpx solid green; */
+  /* border: 1rpx solid red; */
   margin: 2% 0 0 1%;
 }
 
@@ -62,5 +65,5 @@
   width: 50rpx;
   height: 50rpx;
   vertical-align: middle;
-  margin: 10rpx;
+  margin: 10rpx 0rpx 10rpx 5rpx;
 }
