--- a/client/pages/me/index.wxss
+++ b/client/pages/me/index.wxss
@@ -29,6 +29,7 @@ page{
   margin: 4% 0 0 0;
 }
 .activity_item .item {
+  width: 100%;
   text-indent: 25rpx;
   display: flex;
   align-items: center;
@@ -38,11 +39,35 @@ page{
   font-size: 35rpx;
   font-weight:500;
   border-bottom: 1rpx solid #dddddd;
-  /* border: 1rpx solid red; */
+  /* border: 1rpx solid sandybrown; */
 }
 .activity_item .item image {
   margin: 0 0 0 7%;
-  width: 28rpx;
+  width: 35rpx;
   height: 28rpx;
-  /* border: 1rpx solid red; */
+  /* border: 1rpx solid skyblue; */
+}
+.tip {
+  /* visibility:hidden; */
+  position:relative;
+  left:-20rpx;
+  top: -10rpx;
+    min-width: 20px;
+    height: 20px;
+    width: 20rpx;
+    background: red;
+    box-sizing: border-box;/*必须是border-box，自行体会*/
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    /*display: inline-block;/*肯定是inline-block，因为行内元素宽度auto呀*/
+    /* border: 1rpx solid blue; */
+}
+.tip text{
+  align-self: center;
+    color: white;
+    font-size: 10px;
+    text-align: center;
+    line-height: 20px;
+    margin-left: -22rpx;
 }
